--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "node-apps",
+  "name": "hw-tested",
   "version": "1.0.0",
   "description": "",
-  "main": "promises.test.js",
+  "main": "index.js",
   "directories": {
-    "doc": "docs"
+    "lib": "lib"
   },
-  "dependencies": {
-    "jest": "^24.8.0"
-  },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "lint": "eslint **/*.js",
+    "test": "jest --verbose --coverage",
+    "test-watch": "jest --watchAll --verbose --coverage"
   },
-  "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "eslint": "^5.6.1",
+    "jest": "^23.6.0"
+  }
 }
